K8S/frontend/service.yaml
# ==============================================================================
# 1. זהות השירות (Metadata):
# יצירת כתובת רשת קבועה
# ('frontend-service') בתוך הקלאסטר.
# ==============================================================================
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-app
spec:
# ==============================================================================
# 2. סוג וניתוב (Type & Selector):
# שירות פנימי
# (ClusterIP)
# המנתב תעבורה אל פודי ה-
# Frontend.
# ==============================================================================
  type: ClusterIP
  selector:
    app: frontend
# ==============================================================================
# 3. מיפוי פורטים (Ports):
# קבלת תקשורת מה-
# Ingress
# בפורט 80
# והעברתה לפורט 8080
# בקונטיינר.
# כדי לגשר בין התקשורת הסטנדרטית - ה-
# Ingress
# פונה בפורט 80 הרגיל
# לבין אבטחת הקונטיינר - שמוגדר כ-
# Non-Root
# ולכן רשאי להאזין רק לפורטים גבוהים כמו 8080
# ==============================================================================
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
